--- a/locale/en/mod-locale.cfg
+++ b/locale/en/mod-locale.cfg
@@ -33,14 +33,14 @@ power-armor-mk2-grid-size-h=[item=power-armor-mk2][color=#C0C0C0]Power Armour MK
 power-armor-mk2-grid-size-w=[item=power-armor-mk2][color=#C0C0C0]Power Armour MK2 Width[/color]
 
 # DLC Armour's
-mech-armor-grid-size-h=[item=mech-armor][color=#C0C0C0]Mech-Armor Height[/color]
-mech-armor-grid-size-w=[item=mech-armor][color=#C0C0C0]Mech-Armor Width[/color]
+mech-armor-grid-size-h=[item=mech-armor][color=#C0C0C0]Mech Armour Height[/color]
+mech-armor-grid-size-w=[item=mech-armor][color=#C0C0C0]Mech Armour Width[/color]
 
-sa-cas-mech-armor-inv-size=[item=mech-armor][color=#C0C0C0]mech-armor Inv-B Size[/color]
+sa-cas-mech-armor-inv-size=[item=mech-armor][color=#C0C0C0]Mech Armour Inv-B Size[/color]
 
 # Bob's Armour's
-cas-bob-heavy-armor-2-inv-size=[item=heavy-armor-2][color=orange]Bob's Heavy Armor Mk2 Inv-B Size[/color]
-cas-bob-heavy-armor-3-inv-size=[item=heavy-armor-3][color=orange]Bob's Heavy Armor MK3 Inv-B Size[/color]
+cas-bob-heavy-armor-2-inv-size=[item=heavy-armor-2][color=orange]Bob's Heavy Armour Mk2 Inv-B Size[/color]
+cas-bob-heavy-armor-3-inv-size=[item=heavy-armor-3][color=orange]Bob's Heavy Armour MK3 Inv-B Size[/color]
 cas-bob-power-armor-mk3-inv-size=[item=bob-power-armor-mk3][color=orange]Bob's Power Armour MK3 Inv-B Size[/color]
 cas-bob-power-armor-mk4-inv-size=[item=bob-power-armor-mk4][color=orange]Bob's Power Armour MK4 Inv-B Size[/color]
 cas-bob-power-armor-mk5-inv-size=[item=bob-power-armor-mk5][color=orange]Bob's Power Armour MK5 Inv-B Size[/color]
@@ -116,30 +116,30 @@ cas-k2-power-armor-mk3-inv-size=[item=power-armor-mk3][color=#9000d3]K2's Power 
 cas-k2-power-armor-mk4-inv-size=[item=power-armor-mk4][color=#9000d3]K2's Power Armour Mk4 Inv-B Size[/color]
 
 # Nullius
-nullius-1-grid-size-h=[item=nullius-chassis-1][color=#9000d3]Nullius's Armor Chassis 1 Hight[/color]
-nullius-1-grid-size-w=[item=nullius-chassis-1][color=#9000d3]Nullius's Armor Chassis 1 Width[/color]
+nullius-1-grid-size-h=[item=nullius-chassis-1][color=#9000d3]Nullius's Armour Chassis 1 Hight[/color]
+nullius-1-grid-size-w=[item=nullius-chassis-1][color=#9000d3]Nullius's Armour Chassis 1 Width[/color]
 
-nullius-2-grid-size-h=[item=nullius-chassis-2][color=#9000d3]Nullius's Armor Chassis 2 Hight[/color]
-nullius-2-grid-size-w=[item=nullius-chassis-2][color=#9000d3]Nullius's Armor Chassis 2 Width[/color]
+nullius-2-grid-size-h=[item=nullius-chassis-2][color=#9000d3]Nullius's Armour Chassis 2 Hight[/color]
+nullius-2-grid-size-w=[item=nullius-chassis-2][color=#9000d3]Nullius's Armour Chassis 2 Width[/color]
 
-nullius-3-grid-size-h=[item=nullius-chassis-3][color=#9000d3]Nullius's Armor Chassis 3 Hight[/color]
-nullius-3-grid-size-w=[item=nullius-chassis-3][color=#9000d3]Nullius's Armor Chassis 3 Width[/color]
+nullius-3-grid-size-h=[item=nullius-chassis-3][color=#9000d3]Nullius's Armour Chassis 3 Hight[/color]
+nullius-3-grid-size-w=[item=nullius-chassis-3][color=#9000d3]Nullius's Armour Chassis 3 Width[/color]
 
-nullius-4-grid-size-h=[item=nullius-chassis-4][color=#9000d3]Nullius's Armor Chassis 4 Hight[/color]
-nullius-4-grid-size-w=[item=nullius-chassis-4][color=#9000d3]Nullius's Armor Chassis 4 Width[/color]
+nullius-4-grid-size-h=[item=nullius-chassis-4][color=#9000d3]Nullius's Armour Chassis 4 Hight[/color]
+nullius-4-grid-size-w=[item=nullius-chassis-4][color=#9000d3]Nullius's Armour Chassis 4 Width[/color]
 
-nullius-5-grid-size-h=[item=nullius-chassis-5][color=#9000d3]Nullius's Armor Chassis 5 Hight[/color]
-nullius-5-grid-size-w=[item=nullius-chassis-5][color=#9000d3]Nullius's Armor Chassis 5 Width[/color]
+nullius-5-grid-size-h=[item=nullius-chassis-5][color=#9000d3]Nullius's Armour Chassis 5 Hight[/color]
+nullius-5-grid-size-w=[item=nullius-chassis-5][color=#9000d3]Nullius's Armour Chassis 5 Width[/color]
 
-nullius-6-grid-size-h=[item=nullius-chassis-6][color=#9000d3]Nullius's Armor Chassis 6 Hight[/color]
-nullius-6-grid-size-w=[item=nullius-chassis-6][color=#9000d3]Nullius's Armor Chassis 6 Width[/color]
+nullius-6-grid-size-h=[item=nullius-chassis-6][color=#9000d3]Nullius's Armour Chassis 6 Hight[/color]
+nullius-6-grid-size-w=[item=nullius-chassis-6][color=#9000d3]Nullius's Armour Chassis 6 Width[/color]
 
-n-cas-nullius-chassis-1-inv-size=[item=nullius-chassis-1][color=#9000d3]Nullius's Armor Chassis 1 Inv-B[/color]
-n-cas-nullius-chassis-2-inv-size=[item=nullius-chassis-2][color=#9000d3]Nullius's Armor Chassis 2 Inv-B[/color]
-n-cas-nullius-chassis-3-inv-size=[item=nullius-chassis-3][color=#9000d3]Nullius's Armor Chassis 3 Inv-B[/color]
-n-cas-nullius-chassis-4-inv-size=[item=nullius-chassis-4][color=#9000d3]Nullius's Armor Chassis 4 Inv-B[/color]
-n-cas-nullius-chassis-5-inv-size=[item=nullius-chassis-5][color=#9000d3]Nullius's Armor Chassis 5 Inv-B[/color]
-n-cas-nullius-chassis-6-inv-size=[item=nullius-chassis-6][color=#9000d3]Nullius's Armor Chassis 6 Inv-B[/color]
+n-cas-nullius-chassis-1-inv-size=[item=nullius-chassis-1][color=#9000d3]Nullius's Armour Chassis 1 Inv-B[/color]
+n-cas-nullius-chassis-2-inv-size=[item=nullius-chassis-2][color=#9000d3]Nullius's Armour Chassis 2 Inv-B[/color]
+n-cas-nullius-chassis-3-inv-size=[item=nullius-chassis-3][color=#9000d3]Nullius's Armour Chassis 3 Inv-B[/color]
+n-cas-nullius-chassis-4-inv-size=[item=nullius-chassis-4][color=#9000d3]Nullius's Armour Chassis 4 Inv-B[/color]
+n-cas-nullius-chassis-5-inv-size=[item=nullius-chassis-5][color=#9000d3]Nullius's Armour Chassis 5 Inv-B[/color]
+n-cas-nullius-chassis-6-inv-size=[item=nullius-chassis-6][color=#9000d3]Nullius's Armour Chassis 6 Inv-B[/color]
 
 # Power And Armour
 cas-PaA-power-armor-mk3-inv-size=[item=PaA-power-armor-mk3][color=#89CE94]P&A's Power Armour MK3 Inv-B Size[/color]
@@ -276,8 +276,8 @@ mech-armor-grid-size-h=Mech Armor\nMin:0\nMax:60\nBase Default:10\n[color=red]Wa
 mech-armor-grid-size-w=Mech Armor\nMin:0\nMax:60\nBase Default:12\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
 
 # Bob's Armour's
-cas-bob-heavy-armor-2-inv-size=Bob's Heavy Armor 2\nMin:0\nMax:750\nBase Default:0
-cas-bob-heavy-armor-3-inv-size=Bob's Heavy Armor 3\nMin:0\nMax:1250\nBase Default:0
+cas-bob-heavy-armor-2-inv-size=Bob's Heavy Armour 2\nMin:0\nMax:750\nBase Default:0
+cas-bob-heavy-armor-3-inv-size=Bob's Heavy Armour 3\nMin:0\nMax:1250\nBase Default:0
 cas-bob-power-armor-mk3-inv-size=Bob's Power Armour 3\nMin:0\nMax:1500\nBase Default:40
 cas-bob-power-armor-mk4-inv-size=Bob's Power Armour 4\nMin:0\nMax:2000\nBase Default:50
 cas-bob-power-armor-mk5-inv-size=Bob's Power Armour 5\nMin:0\nMax:2500\nBase Default:60
@@ -371,30 +371,30 @@ mk4-armor-grid-size-h="K2's" Power Armour Mk4 Height\nMin:0\nMax:400\nBase Defau
 mk4-armor-grid-size-w="K2's" Power Armour MK4 Width\nMin:0\nMax:400\nBase Default:12\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
 
 # Nullius
-nullius-1-grid-size-h=Nullius's Armor Chassis 1 Høyde\nMin:0\nMax:300\nBase Default:6\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
-nullius-1-grid-size-w=Nullius's Armor Chassis 1 Bredde\nMin:0\nMax:300\nBase Default:5\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
+nullius-1-grid-size-h=Nullius's Armour Chassis 1 Høyde\nMin:0\nMax:300\nBase Default:6\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
+nullius-1-grid-size-w=Nullius's Armour Chassis 1 Bredde\nMin:0\nMax:300\nBase Default:5\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
 
-nullius-2-grid-size-h=Nullius's Armor Chassis 2 Høyde\nMin:0\nMax:400\nBase Default:8\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
-nullius-2-grid-size-w=Nullius's Armor Chassis 2 Bredde\nMin:0\nMax:400\nBase Default:6\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
+nullius-2-grid-size-h=Nullius's Armour Chassis 2 Høyde\nMin:0\nMax:400\nBase Default:8\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
+nullius-2-grid-size-w=Nullius's Armour Chassis 2 Bredde\nMin:0\nMax:400\nBase Default:6\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
 
-nullius-3-grid-size-h=Nullius's Armor Chassis 3 Høyde\nMin:0\nMax:500\nBase Default:10\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
-nullius-3-grid-size-w=Nullius's Armor Chassis 3 Bredde\nMin:0\nMax:500\nBase Default:8\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
+nullius-3-grid-size-h=Nullius's Armour Chassis 3 Høyde\nMin:0\nMax:500\nBase Default:10\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
+nullius-3-grid-size-w=Nullius's Armour Chassis 3 Bredde\nMin:0\nMax:500\nBase Default:8\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
 
-nullius-4-grid-size-h=Nullius's Armor Chassis 4 Høyde\nMin:0\nMax:600\nBase Default:12\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
-nullius-4-grid-size-w=Nullius's Armor Chassis 4 Bredde\nMin:0\nMax:600\nBase Default:9\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
+nullius-4-grid-size-h=Nullius's Armour Chassis 4 Høyde\nMin:0\nMax:600\nBase Default:12\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
+nullius-4-grid-size-w=Nullius's Armour Chassis 4 Bredde\nMin:0\nMax:600\nBase Default:9\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
 
-nullius-5-grid-size-h=Nullius's Armor Chassis 5 Høyde\nMin:0\nMax:700\nBase Default:14\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
-nullius-5-grid-size-w=Nullius's Armor Chassis 5 Bredde\nMin:0\nMax:700\nBase Default:10\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
+nullius-5-grid-size-h=Nullius's Armour Chassis 5 Høyde\nMin:0\nMax:700\nBase Default:14\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
+nullius-5-grid-size-w=Nullius's Armour Chassis 5 Bredde\nMin:0\nMax:700\nBase Default:10\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
 
-nullius-6-grid-size-h=Nullius's Armor Chassis 6 Høyde\nMin:0\nMax:800\nBase Default:18\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
-nullius-6-grid-size-w=Nullius's Armor Chassis 6 Bredde\nMin:0\nMax:800\nBase Default:10\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
+nullius-6-grid-size-h=Nullius's Armour Chassis 6 Høyde\nMin:0\nMax:800\nBase Default:18\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
+nullius-6-grid-size-w=Nullius's Armour Chassis 6 Bredde\nMin:0\nMax:800\nBase Default:10\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
 
-n-cas-nullius-chassis-1-inv-size=Nullius's Armor Chassis 1 \nMin:0\nMax:1000\nBase Default:0
-n-cas-nullius-chassis-2-inv-size=Nullius's Armor Chassis 2 \nMin:0\nMax:2000\nBase Default:10
-n-cas-nullius-chassis-3-inv-size=Nullius's Armor Chassis 3 \nMin:0\nMax:3000\nBase Default:20
-n-cas-nullius-chassis-4-inv-size=Nullius's Armor Chassis 4 \nMin:0\nMax:4000\nBase Default:30
-n-cas-nullius-chassis-5-inv-size=Nullius's Armor Chassis 5 \nMin:0\nMax:5000\nBase Default:40
-n-cas-nullius-chassis-6-inv-size=Nullius's Armor Chassis 6 \nMin:0\nMax:6000\nBase Default:50
+n-cas-nullius-chassis-1-inv-size=Nullius's Armour Chassis 1 \nMin:0\nMax:1000\nBase Default:0
+n-cas-nullius-chassis-2-inv-size=Nullius's Armour Chassis 2 \nMin:0\nMax:2000\nBase Default:10
+n-cas-nullius-chassis-3-inv-size=Nullius's Armour Chassis 3 \nMin:0\nMax:3000\nBase Default:20
+n-cas-nullius-chassis-4-inv-size=Nullius's Armour Chassis 4 \nMin:0\nMax:4000\nBase Default:30
+n-cas-nullius-chassis-5-inv-size=Nullius's Armour Chassis 5 \nMin:0\nMax:5000\nBase Default:40
+n-cas-nullius-chassis-6-inv-size=Nullius's Armour Chassis 6 \nMin:0\nMax:6000\nBase Default:50
 
 # Power And Armour
 cas-PaA-power-armor-mk3-inv-size=P&A Power Armour MK3\nMin:0\nMax:800\nBase Default:60
