--- a/locale/en/mod-locale.cfg
+++ b/locale/en/mod-locale.cfg
@@ -466,7 +466,7 @@ m-cas-8-par-armour-mk8-inv-size=P.A.R's Power Armour MK8 Inv-B Size\nMin:0\nMax:
 m-cas-9-par-armour-mk9-inv-size=P.A.R's Power Armour MK9 Inv-B Size\nMin:0\nMax:4500\nBase Default:450\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
 m-cas-10-par-armour-mk10-inv-size=P.A.R's Power Armour MK10 Inv-B Size\nMin:0\nMax:5000\nBase Default:500\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
 
-hard_science_required=Adding space science packs to be required in reserching MK6 --> MK10 & MK5 Exo.\nThis setting has no effect if u use this mod with SE (Space Exploration).
+hard_science_required=Adding space science packs to be required in reserching MK6 --> MK10 & MK5 Exo.
 
 
 # Rampant Arsenal
