--- a/locale/no/mod-locales.cfg
+++ b/locale/no/mod-locales.cfg
@@ -433,7 +433,7 @@ m-cas-8-par-armour-mk8-inv-size=P.A.R's Elektrisk Rustning MK8 Inv Størrelse\nM
 m-cas-9-par-armour-mk9-inv-size=P.A.R's Elektrisk Rustning MK9 Inv Størrelse\nMin:0\nMaks:4500\nBase Default:450
 m-cas-10-par-armour-mk10-inv-size=P.A.R's Elektrisk Rustning MK10 Inv Størrelse\nMin:0\nMaks:5000\nBase Default:500
 
-hard_science_required=Legger til ekstra verdensrom forsknings pakker til MK6 til MK10 og Exoskjelett MK5. For å gjøre det vanskeligere.\nDenne instillingen har ingen fynksjonen hvis to spiller med SE mod.\nIntill jeg finner enn fiks.
+hard_science_required=Legger til ekstra verdensrom forsknings pakker til MK6 opptil MK10 og Exoskjelett MK5, for å gjøre det vanskeligere.
 
 # Rampant Arsenal
 cas-ra-power-armor-mk3-armor-rampant-arsenal-inv-size=R.A Elektrisk Rustning MK3\nMin:0\nMaks:1500\nSpillets Normal:60
