RampantArsenalForked, Space-age, other changes.

--- a/Configurable-Armour-Suits/locale/en/settings.cfg
+++ b/Configurable-Armour-Suits/locale/en/settings.cfg
@@ -195,11 +195,14 @@ m-cas-10-par-armour-mk10-inv-size=[item=par-armour-mk10][color=#e00700]P.A.R's P
 
 hard_science_required=[item=space-science-pack][color=#e00700]Adding space science packs[/color]
 
-# Rampant Arsenal
+# Rampant Arsenal or(Forked)
 cas-ra-power-armor-mk3-armor-rampant-arsenal-inv-size=[item=power-armor-mk3-armor-rampant-arsenal][color=#2cd240]Arsenal's Power Armour MK3 Inv-B Size[/color]
+cas-ra-combat-mech-armor-rampant-arsenal-inv-size=[item=combat-mech-armor-rampant-arsenal][color=#2cd240]Arsenal's Mech Suit Inv-B Size[/color]
 
-power-armor-mk3-armor-rampant-arsenal-grid-size-h=[item=power-armor-mk3-armor-rampant-arsenal][color=#2cd240]Arsenal's Power Armour MK3 Height[/color]
-power-armor-mk3-armor-rampant-arsenal-grid-size-w=[item=power-armor-mk3-armor-rampant-arsenal][color=#2cd240]Arsenal's Power Armour MK3 Width[/color]
+ArmorMk3RA-grid-size-h=[item=power-armor-mk3-armor-rampant-arsenal][color=#2cd240]Arsenal's Power Armour MK3 Height[/color]
+ArmorMk3RA-grid-size-w=[item=power-armor-mk3-armor-rampant-arsenal][color=#2cd240]Arsenal's Power Armour MK3 Width[/color]
+MechArmourRA-grid-size-h=[item=combat-mech-armor-rampant-arsenal][color=#2cd240]Arsenal's Mech Suit Height[/color]
+MechArmourRA-grid-size-w=[item=combat-mech-armor-rampant-arsenal][color=#2cd240]Arsenal's Mech Suit Width[/color]
 
 # Space Exploration
 cas-se-thruster-suit-inv-size=[item=se-thruster-suit][color=pink]SE's Space Suit 1 Inv-B Size[/color]
@@ -252,10 +255,10 @@ power-armor-mk2-grid-size-h=Power Armour MK2 Height\nMin:0\nMax:40\nBase Default
 power-armor-mk2-grid-size-w=Power Armour MK2 Width\nMin:0\nMax:40\nBase Default:10\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
 
 # DLC Armour's
-sa-cas-mech-armor-inv-size=Mech Armor\nMin:0\nMax:1500\nBase Default:50
+sa-cas-mech-armor-inv-size=[color=green]Mech Armor\nMin:0\nMax:1500\nBase Default:50[/color]\n\n\n[color=yellow]SpaceePar:Mech Armor\nMin:0\nMax:3000\nBase Default:50[/color]
 
-mech-armor-grid-size-h=Mech Armor\nMin:0\nMax:60\nBase Default:10\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
-mech-armor-grid-size-w=Mech Armor\nMin:0\nMax:60\nBase Default:12\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
+mech-armor-grid-size-h=[color=green]Mech Armor\nMin:0\nMax:60\nBase Default:10[/color]\n\n\n[color=yellow]SpaceePar:Mech Armor\nMin:0\nMax:600\nBase Default:10[/color]\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
+mech-armor-grid-size-w=[color=green]Mech Armor\nMin:0\nMax:60\nBase Default:12[/color]\n\n\n[color=yellow]SpaceePar:Mech Armor\nMin:0\nMax:600\nBase Default:12[/color]\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
 
 # Bob's Armour's
 cas-bob-heavy-armor-2-inv-size=Bob's Heavy Armour 2\nMin:0\nMax:750\nBase Default:0
@@ -444,8 +447,11 @@ m-cas-10-par-armour-mk10-inv-size=P.A.R's Power Armour MK10 Inv-B Size\nMin:0\nM
 hard_science_required=Adding space science packs to be required in reserching MK6 --> MK10 & MK5 Exo.
 
 
-# Rampant Arsenal
+# Rampant Arsenal or(Forked)
 cas-ra-power-armor-mk3-armor-rampant-arsenal-inv-size=R.A Power Armour MK3\nMin:0\nMax:1500\nBase Default:60
+cas-ra-combat-mech-armor-rampant-arsenal-inv-size=[color=green]R.A Mech Suit\nMin:0\nMax:1750\nBase Default:60[/color]\n\n\n[color=yellow]SpacePar:R.A Mech Suit\nMin:0\nMax:4000\nBase Default:60[/color]
 
-power-armor-mk3-armor-rampant-arsenal-grid-size-h="Arsenal's" Power Armour Mk3 Height\nMin:0\nMax:60\nBase Default:12\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
-power-armor-mk3-armor-rampant-arsenal-grid-size-w="Arsenal's" Power Armour Mk3 Width\nMin:0\nMax:60\nBase Default:12\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
+ArmorMk3RA-grid-size-h="Arsenal's" Power Armour Mk3 Height\nMin:0\nMax:60\nBase Default:12\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
+ArmorMk3RA-grid-size-w="Arsenal's" Power Armour Mk3 Width\nMin:0\nMax:60\nBase Default:12\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
+MechArmourRA-grid-size-h=[color=green]"Arsenal's" Mech Armour Height\nMin:0\nMax:75\nBase Default:12[/color]\n\n\n[color=yellow]SpacePar:R.A Mech Suit\nMin:0\nMax:750\nBase Default:12[/color]\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
+MechArmourRA-grid-size-w=[color=green]"Arsenal's" Mech Armour Width\nMin:0\nMax:75\nBase Default:12[/color]\n\n\n[color=yellow]SpacePar:R.A Mech Suit\nMin:0\nMax:750\nBase Default:12[/color]\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
