made un-needed work around to lazy to revert. untill answer

--- a/Configurable-Armour-Suits/locale/en/settings.cfg
+++ b/Configurable-Armour-Suits/locale/en/settings.cfg
@@ -29,6 +29,11 @@ mech-armor-grid-size-w=[item=mech-armor][color=#C0C0C0]Mech Armour Width[/color]
 
 sa-cas-mech-armor-inv-size=[item=mech-armor][color=#C0C0C0]Mech Armour Inv-B Size[/color]
 
+#Metal&Stars
+MSMS-grid-h=[item=prototype-mech-armor][color=orange]M Star's Prototype Mech Armour Height[/color]
+MSMS-grid-w=[item=prototype-mech-armor][color=orange]M Star's Prototype Mech Armour Width[/color]
+Cas-MSMS-prototype-mech-armor-inv-size=[item=prototype-mech-armor][color=orange]Metals & Star's Prototype Mech Armour Inv-B Size[/color]
+
 # Bob's Armour's
 cas-bob-power-armor-mk3-inv-size=[item=bob-power-armor-mk3][color=orange]Bob's Power Armour MK3 Inv-B Size[/color]
 cas-bob-power-armor-mk4-inv-size=[item=bob-power-armor-mk4][color=orange]Bob's Power Armour MK4 Inv-B Size[/color]
@@ -255,10 +260,15 @@ power-armor-mk2-grid-size-h=Power Armour MK2 Height\nMin:0\nMax:40\nBase Default
 power-armor-mk2-grid-size-w=Power Armour MK2 Width\nMin:0\nMax:40\nBase Default:10\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
 
 # DLC Armour's
-sa-cas-mech-armor-inv-size=[color=green]Mech Armor\nMin:0\nMax:1500\nBase Default:50[/color]\n\n\n[color=yellow]SpaceePar:Mech Armor\nMin:0\nMax:3000\nBase Default:50[/color]
+sa-cas-mech-armor-inv-size=[color=green]Mech Armor\nMin:0\nMax:1500\nBase Default:50[/color]\n\n\n[color=yellow]SpacePar:Mech Armor\nMin:0\nMax:3000\nBase Default:50[/color]
 
-mech-armor-grid-size-h=[color=green]Mech Armor\nMin:0\nMax:60\nBase Default:10[/color]\n\n\n[color=yellow]SpaceePar:Mech Armor\nMin:0\nMax:600\nBase Default:10[/color]\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
-mech-armor-grid-size-w=[color=green]Mech Armor\nMin:0\nMax:60\nBase Default:12[/color]\n\n\n[color=yellow]SpaceePar:Mech Armor\nMin:0\nMax:600\nBase Default:12[/color]\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
+mech-armor-grid-size-h=[color=green]Mech Armor\nMin:0\nMax:60\nBase Default:10[/color]\n\n\n[color=yellow]SpacePar:Mech Armor\nMin:0\nMax:600\nBase Default:10[/color]\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
+mech-armor-grid-size-w=[color=green]Mech Armor\nMin:0\nMax:60\nBase Default:12[/color]\n\n\n[color=yellow]SpacePar:Mech Armor\nMin:0\nMax:600\nBase Default:12[/color]\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
+
+#Metal&Stars
+MSMS-grid-h=[color=green]Mech Armor\nMin:0\nMax:35\nBase Default:6[/color]\n\n\n[color=yellow]Par:Mech Armor\nMin:0\nMax:350\nBase Default:6[/color]\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
+MSMS-grid-w=[color=green]Mech Armor\nMin:0\nMax:35\nBase Default:8[/color]\n\n\n[color=yellow]Par:Mech Armor\nMin:0\nMax:350\nBase Default:8[/color]\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
+Cas-MSMS-prototype-mech-armor-inv-size=[color=green]Mech Armor\nMin:0\nMax:750\nBase Default:?[/color]\n\n\n[color=yellow]Par:Mech Armor\nMin:0\nMax:1500\nBase Default:?[/color]
 
 # Bob's Armour's
 cas-bob-heavy-armor-2-inv-size=Bob's Heavy Armour 2\nMin:0\nMax:750\nBase Default:0
