--- a/Configurable-Armour-Suits/locale/en/settings.cfg
+++ b/Configurable-Armour-Suits/locale/en/settings.cfg
@@ -93,14 +93,14 @@ hl-4-grid-size-h=[item=hsmd-power-armor-mk4][color=purple]Hiladdar's Power Armou
 hl-4-grid-size-w=[item=hsmd-power-armor-mk4][color=purple]Hiladdar's Power Armour 4 Width[/color]
 
 # Krastorio 2
-mk3-armor-grid-size-h=[item=power-armor-mk3][color=#9000d3]K2's Power Armour MK3 Height[/color]
-mk3-armor-grid-size-w=[item=power-armor-mk3][color=#9000d3]K2's Power Armour MK3 Width[/color]
+KR2-grid3-h=[item=kr-power-armor-mk3][color=#9000d3]K2's Power Armour MK3 Height[/color]
+KR2-grid3-w=[item=kr-power-armor-mk3][color=#9000d3]K2's Power Armour MK3 Width[/color]
 
-mk4-armor-grid-size-h=[item=power-armor-mk4][color=#9000d3]K2's Power Armour MK4 Height[/color]
-mk4-armor-grid-size-w=[item=power-armor-mk4][color=#9000d3]K2's Power Armour MK4 Width[/color]
+KR2-grid4-h=[item=kr-power-armor-mk4][color=#9000d3]K2's Power Armour MK4 Height[/color]
+KR2-grid4-w=[item=kr-power-armor-mk4][color=#9000d3]K2's Power Armour MK4 Width[/color]
 
-cas-k2-power-armor-mk3-inv-size=[item=power-armor-mk3][color=#9000d3]K2's Power Armour Mk3 Inv-B Size[/color]
-cas-k2-power-armor-mk4-inv-size=[item=power-armor-mk4][color=#9000d3]K2's Power Armour Mk4 Inv-B Size[/color]
+cas-k2-kr-power-armor-mk3-inv-size=[item=kr-power-armor-mk3][color=#9000d3]K2's Power Armour Mk3 Inv-B Size[/color]
+cas-k2-kr-power-armor-mk4-inv-size=[item=kr-power-armor-mk4][color=#9000d3]K2's Power Armour Mk4 Inv-B Size[/color]
 
 # Nullius
 nullius-1-grid-size-h=[item=nullius-chassis-1][color=#9000d3]Nullius's Armour Chassis 1 Hight[/color]
@@ -349,14 +349,14 @@ se-thruster-suit-4-grid-size-h="SE's" Space Suit 4 Height\nMin:0\nMax:500\nBase 
 se-thruster-suit-4-grid-size-w="SE's" Space Suit 4 Width\nMin:0\nMax:500\nBase Default:12\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
 
 # Krastorio 2
-cas-k2-power-armor-mk3-inv-size=K2 Power Armour Mk3\nMin:0\nMax:800\nBase Default:40
-cas-k2-power-armor-mk4-inv-size=K2 Power Armour Mk4\nMin:0\nMax:900\nBase Default:50
+cas-k2-kr-power-armor-mk3-inv-size=K2 Power Armour Mk3\nMin:0\nMax:800\nBase Default:40
+cas-k2-kr-power-armor-mk4-inv-size=K2 Power Armour Mk4\nMin:0\nMax:900\nBase Default:50
 
-mk3-armor-grid-size-h="K2's" Power Armour MK3 Height\nMin:0\nMax:60\nBase Default:10\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
-mk3-armor-grid-size-w="K2's" Power Armour MK3 Width\nMin:0\nMax:60\nBase Default:10\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
+KR2-mk3-armor-grid-size-h="K2's" Power Armour MK3 Height\nMin:0\nMax:60\nBase Default:10\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
+KR2-mk3-armor-grid-size-w="K2's" Power Armour MK3 Width\nMin:0\nMax:60\nBase Default:10\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
 
-mk4-armor-grid-size-h="K2's" Power Armour Mk4 Height\nMin:0\nMax:400\nBase Default:12\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
-mk4-armor-grid-size-w="K2's" Power Armour MK4 Width\nMin:0\nMax:400\nBase Default:12\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
+KR2-mk4-armor-grid-size-h="K2's" Power Armour Mk4 Height\nMin:0\nMax:400\nBase Default:12\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
+KR2-mk4-armor-grid-size-w="K2's" Power Armour MK4 Width\nMin:0\nMax:400\nBase Default:12\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
 
 # Nullius
 nullius-1-grid-size-h=Nullius's Armour Chassis 1 Høyde\nMin:0\nMax:300\nBase Default:6\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
