--- a/Configurable-Armour-Suits/locale/no/mod-locales.cfg
+++ b/Configurable-Armour-Suits/locale/no/mod-locales.cfg
@@ -85,14 +85,14 @@ hl-4-grid-size-h=[item=hsmd-power-armor-mk4][color=purple]Hiladdar's Elektrisk R
 hl-4-grid-size-w=[item=hsmd-power-armor-mk4][color=purple]Hiladdar's Elektrisk Rustning 4 Bredde[/color]
 
 # Krastorio 2
-cas-k2-power-armor-mk3-inv-size=[item=power-armor-mk3][color=#9000d3]K2 Power Armour Mk3 Inv Størrelse[/color]
-cas-k2-power-armor-mk4-inv-size=[item=power-armor-mk4][color=#9000d3]K2 Power Armour Mk4 Inv Størrelse[/color]
+cas-k2-kr-power-armor-mk3-inv-size=[item=kr-power-armor-mk3][color=#9000d3]K2 Power Armour Mk3 Inv Størrelse[/color]
+cas-k2-kr-power-armor-mk4-inv-size=[item=kr-power-armor-mk4][color=#9000d3]K2 Power Armour Mk4 Inv Størrelse[/color]
 
-mk3-armor-grid-size-h=[item=power-armor-mk3][color=#9000d3]K2's Elektriske Rustning MK3 Høyde[/color]
-mk3-armor-grid-size-w=[item=power-armor-mk3][color=#9000d3]K2's Elektriske Rustning MK3 Bredde[/color]
+KR2-grid3-h=[item=kr-power-armor-mk3][color=#9000d3]K2's Elektriske Rustning MK3 Høyde[/color]
+KR2-grid3-w=[item=kr-power-armor-mk3][color=#9000d3]K2's Elektriske Rustning MK3 Bredde[/color]
 
-mk4-armor-grid-size-h=[item=power-armor-mk4][color=#9000d3]K2's Elektriske Rustning MK4 Høyde[/color]
-mk4-armor-grid-size-w=[item=power-armor-mk4][color=#9000d3]K2's Elektriske Rustning MK4 Bredde[/color]
+KR2-grid4-h=[item=kr-power-armor-mk4][color=#9000d3]K2's Elektriske Rustning MK4 Høyde[/color]
+KR2-grid4-w=[item=kr-power-armor-mk4][color=#9000d3]K2's Elektriske Rustning MK4 Bredde[/color]
 
 # Nullius
 nullius-1-grid-size-h=[item=nullius-chassis-1][color=#9000d3]Nullius's Rustnings Ramme 1 Høyde[/color]
@@ -312,14 +312,14 @@ hl-4-grid-size-h=Hiladdar's Elektrisk Rustning 4 Høyde\nMin:0\nMaks:60\nSpillet
 hl-4-grid-size-w=Hiladdar's Elektrisk Rustning 4 Bredde\nMin:0\nMaks:60\nSpillets Normal:14\n[color=red]Advarsel!!! Modden er ikke ansvalig for mistet ting om du gjør endringer i et pågående spill[/color]
 
 # Krastorio 2
-cas-k2-power-armor-mk3-inv-size=K2 Elektrisk Rustning Mk3\nMin:0\nMaks:1500\nSpillets Normal:40
-cas-k2-power-armor-mk4-inv-size=K2 Elektrisk Rustning Mk4\nMin:0\nMaks:2000\nSpillets Normal:50
+cas-k2-kr-power-armor-mk3-inv-size=K2 Elektrisk Rustning Mk3\nMin:0\nMaks:1500\nSpillets Normal:40
+cas-k2-kr-power-armor-mk4-inv-size=K2 Elektrisk Rustning Mk4\nMin:0\nMaks:2000\nSpillets Normal:50
 
-mk3-armor-grid-size-h=K2's Elektrisk Rustning MK3 Rutenett Høyde\nMin:0\nMaks:60\nSpillets Normal:10\n[color=red]Advarsel!!! Modden er ikke ansvalig for mistet ting om du gjør endringer i et pågående spill[/color]
-mk3-armor-grid-size-w=K2's Elektrisk Rustning MK3 Rutenett Bredde\nMin:0\nMaks:60\nSpillets Normal:10\n[color=red]Advarsel!!! Modden er ikke ansvalig for mistet ting om du gjør endringer i et pågående spill[/color]
+KR2-grid3-h=K2's Elektrisk Rustning MK3 Rutenett Høyde\nMin:0\nMaks:60\nSpillets Normal:10\n[color=red]Advarsel!!! Modden er ikke ansvalig for mistet ting om du gjør endringer i et pågående spill[/color]
+KR2-grid3-w=K2's Elektrisk Rustning MK3 Rutenett Bredde\nMin:0\nMaks:60\nSpillets Normal:10\n[color=red]Advarsel!!! Modden er ikke ansvalig for mistet ting om du gjør endringer i et pågående spill[/color]
 
-mk4-armor-grid-size-h=K2's Elektrisk Rustning MK4 Rutenett Høyde\nMin:0\nMaks:400\nSpillets Normal:12\n[color=red]Advarsel!!! Modden er ikke ansvalig for mistet ting om du gjør endringer i et pågående spill[/color]
-mk4-armor-grid-size-w=K2's Elektrisk Rustning MK4 Rutenett Bredde\nMin:0\nMaks:400\nSpillets Normal:12\n[color=red]Advarsel!!! Modden er ikke ansvalig for mistet ting om du gjør endringer i et pågående spill[/color]
+KR2-grid4-h=K2's Elektrisk Rustning MK4 Rutenett Høyde\nMin:0\nMaks:400\nSpillets Normal:12\n[color=red]Advarsel!!! Modden er ikke ansvalig for mistet ting om du gjør endringer i et pågående spill[/color]
+KR2-grid4-w=K2's Elektrisk Rustning MK4 Rutenett Bredde\nMin:0\nMaks:400\nSpillets Normal:12\n[color=red]Advarsel!!! Modden er ikke ansvalig for mistet ting om du gjør endringer i et pågående spill[/color]
 
 # Nullius
 nullius-1-grid-size-h=Nullius's Rustnings Ramme 1 Høyde\nMin:0\nMaks:300\nSpillets Normal:6\n[color=red]Advarsel!!! Modden er ikke ansvalig for mistet ting om du gjør endringer i et pågående spill[/color]
